# wasl

./: .gitignore  .gitmodules  404.html  CNAME  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DIGITAL_CLOCK_README.md  DOMAIN_SETUP.md  GEMMA_INTEGRATION.md  LICENSE  README.md  _config.yml  config.template.js  google-ai-config.md  index.html  login.html  netlify.toml  package-lock.json  package.json  robots.txt  server.js  setup.sh  show-dns-config.sh  sitemap.xml  test-khalid-agent.html  vercel.json  verify-domain.sh  weather-dashboard.html
.github/workflows/: deploy.yml
assets/css/: style.css
assets/js/: main.js
components/: SubscriptionPageHeroUI.jsx
gemma/: CMakeLists.txt  README.md
gemma-cpp/: INTEGRATION_REPORT.md  README_ARABIC.md  build_and_test.sh  run_gemma.sh
gemma-docs/: INSTALL.md  WASL_README.md  run-gemma.sh
gemma/examples/: example_usage.cpp
gemma/include/: gemma.h
gemma/scripts/: build.sh  test.sh
gemma/src/: gemma.cpp  main.cpp
khalid-agent/: README.md  content.js  manifest.json  package.json  popup.css  popup.html  popup.js  sw.js  welcome.html
pages/: subscriptions-demo.jsx
public/: index.html  style.css
